--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,9 @@ dev_dependencies:
   flutter_lints: ^5.0.0
   test: ^1.25.2
 
+  # Git hooks
+  husky: ^0.1.7
+
 flutter:
   uses-material-design: true
   assets:
